Add RAG explanation

--- a/Concepts and definitions.ipynb
+++ b/Concepts and definitions.ipynb
@@ -22,12 +22,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a209c512",
+   "cell_type": "markdown",
+   "id": "001e6fc0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### How Retrieval Augmented Generation (RAG) works?\n",
+    "Steps are below\n",
+    "1. You have a user query that asks a specific question\n",
+    "2. You have which you have previously embedded and stored in the retrieval system\n",
+    "3. You take your query, run it through same embedding model you used to embed previous document and generate an embedding of the query\n",
+    "4. The retrieval systems finds the most relevant documents according to the embedding of that query (the nearest neighbor documents for that embedding)\n",
+    "5. Return both the query and the relevant documents to the LLM\n",
+    "6. LLM synthesizes information from the retrieved document to generate an answer"
+   ]
   }
  ],
  "metadata": {
